Updated php workflow to include working directory

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,6 +16,7 @@ jobs:
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
+      working-directory: tests
 
     - name: Cache Composer packages
       id: composer-cache
@@ -28,6 +29,7 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
+      working-directory: tests
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
