--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -47,4 +47,4 @@ jobs:
       run: 
         working-directory: tests
     steps:
-      - run: ./phpunit-run-all-tests.sh
+      - run: phpunit-run-all-tests.sh
