Add file check to troubleshoot an exit code 127 issue

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -33,7 +33,10 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
-    
+
+    - name: Directory check
+      run: ls -al
+
     - name: Run tests
       run: phpunit-run-all-tests.sh
 
