--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,7 +38,7 @@ jobs:
       run: ls -al
 
     - name: Run tests
-      run: phpunit-run-all-tests.sh
+      run: ./phpunit-run-all-tests.sh
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
