--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,9 +3,14 @@ name: Validate build
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - richBadgeTest
   pull_request:
     branches: [ main ]
+
+env:
+  TEST: ${{ github.ref }}
 
 jobs:
   build:
@@ -36,4 +41,63 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Run tests
-      run: ./phpunit-run-all-tests.sh
+      run: ./build/phpunit-run-all-tests-for-build.sh
+
+    - name: Load test results
+      id: test_results
+      if: always()
+      run: |
+          # Set environment variables for badge output
+          # Build summary results
+          php ./build/phpunit-build-summary.php > ./build/test-summary.json
+          cat ./build/test-summary.json
+          content=`cat ./build/test-summary.json`
+          # the following lines are only required for multi line json
+          # content="${content//'%'/'%25'}"
+          # content="${content//$'\n'/'%0A'}"
+          # content="${content//$'\r'/'%0D'}"
+          # end of optional handling for multi line json
+          echo "::set-output name=summaryJson::$content"
+          # Badges - Build Date
+          echo "BUILD_DATE=$(TZ=America/New_York date)" >> $GITHUB_ENV
+          # Badges - Trim SHA
+          echo "GITHUB_SHA_SHORT=$(echo ${{ github.sha }} | cut -c 1-7)" >> $GITHUB_ENV
+
+    - name: Badges - Build Date
+      if: always()
+      uses: schneegans/dynamic-badges-action@v1.1.0
+      with:
+        auth: ${{ secrets.GIST_TOKEN }}
+        gistID: 4b164d9347a6c3949e01829e581f7296
+        filename: ${{ github.ref_name }}-build-time.json
+        label: Build time
+        message: ${{ env.BUILD_DATE }}
+        color: blue
+        style: plastic
+        cacheSeconds: 305
+
+    - name: Badges - SHA
+      if: always()
+      uses: schneegans/dynamic-badges-action@v1.1.0
+      with:
+        auth: ${{ secrets.GIST_TOKEN }}
+        gistID: 4b164d9347a6c3949e01829e581f7296
+        filename: ${{ github.ref_name }}-sha.json
+        label: SHA
+        message: ${{ env.GITHUB_SHA_SHORT }}
+        color: blue
+        style: plastic
+        cacheSeconds: 305
+
+    - name: Badges - Test Results
+      if: always()
+      uses: schneegans/dynamic-badges-action@v1.1.0
+      with:
+        auth: ${{ secrets.GIST_TOKEN }}
+        gistID: 4b164d9347a6c3949e01829e581f7296
+        filename: ${{ github.ref_name }}-tests.json
+        label: Tests
+        message: ${{fromJson(steps.test_results.outputs.summaryJson).tests}} run, ${{fromJson(steps.test_results.outputs.summaryJson).passed}} passed, ${{fromJson(steps.test_results.outputs.summaryJson).notPassed}} failed, ${{fromJson(steps.test_results.outputs.summaryJson).assertions}} assertions
+        color: ${{fromJson(steps.test_results.outputs.summaryJson).messageBackground}}
+        style: plastic
+        cacheSeconds: 305
