--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Get current branch name
       run: |
-          git rev-parse --abbrev-ref HEAD >> $GITHUB_BRANCH_NAME
+          echo "GITHUB_BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
 
     - name: Run tests
       run: ./build/phpunit-run-all-tests-for-build.sh
