--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,11 +9,9 @@ on:
 
 env:
   # Only set for pull request events. The name of the head (feature) branch.
-  GITHUB_HEAD_REF: ${{ github.head_ref }}
+  DEBUG_GITHUB_HEAD_REF: ${{ github.head_ref }}
   # The branch or tag name that triggered the workflow run. Use for manual workflow runs.
-  GITHUB_REFNAME: ${{ github.ref_name }}
-  # Only set for ____ workflow runs.
-  GITHUB_REF: ${{ github.ref }}
+  DEBUG_GITHUB_REFNAME: ${{ github.ref_name }}
 
 jobs:
   build:
@@ -43,8 +41,10 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Get current branch name
-      run: |
-          echo "GITHUB_BRANCH_NAME=$(git branch --remote --contains | sed "s|[[:space:]]*origin/||")" >> $GITHUB_ENV
+        run: |
+          # Short name for current branch. For PRs, use feature branch (head ref)
+          GIT_BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
+          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
 
     - name: Run tests
       run: ./build/phpunit-run-all-tests-for-build.sh
@@ -75,7 +75,7 @@ jobs:
       with:
         auth: ${{ secrets.GIST_TOKEN }}
         gistID: fc3b4e6e926771e0a5934a801f867e23
-        filename: ${{ env.BRANCH_NAME }}-build-time.json
+        filename: ${{ env.GIT_BRANCH }}-build-time.json
         label: Build time
         message: ${{ env.BUILD_DATE }}
         color: blue
@@ -88,7 +88,7 @@ jobs:
       with:
         auth: ${{ secrets.GIST_TOKEN }}
         gistID: fc3b4e6e926771e0a5934a801f867e23
-        filename: ${{ env.GITHUB_BRANCH_NAME }}-sha.json
+        filename: ${{ env.GIT_BRANCH }}-sha.json
         label: SHA
         message: ${{ env.BUILD_DATE }}
         color: blue
@@ -101,7 +101,7 @@ jobs:
       with:
         auth: ${{ secrets.GIST_TOKEN }}
         gistID: fc3b4e6e926771e0a5934a801f867e23
-        filename: ${{ env.BRANCH_NAME }}-tests.json
+        filename: ${{ env.GIT_BRANCH }}-tests.json
         label: Tests
         message: ${{fromJson(steps.test_results.outputs.summaryJson).tests}} run, ${{fromJson(steps.test_results.outputs.summaryJson).passed}} passed, ${{fromJson(steps.test_results.outputs.summaryJson).notPassed}} failed, ${{fromJson(steps.test_results.outputs.summaryJson).assertions}} assertions
         color: ${{fromJson(steps.test_results.outputs.summaryJson).messageBackground}}
